syntax = "proto3";

option go_package = "github.com/timopattikawa/master-service-tokogua";

service CostumerDataServer{
  rpc FindCostumerById(IdCostumer) returns (Costumer);
}

message Costumer {
  int64 id = 1;
  string costumerName = 2;
  string costumerEmail = 3;
}

message IdCostumer {
  int64 id = 1;
}