syntax = "proto3";


option go_package = "github.com/timopattikawa/payment-gateway-service";

service DataProductServer {
  rpc FindDataProductById(IdProduct) returns (Product);
}

message Product {
  int64 id = 1;
  string name = 2;
  int64 price = 3;
}

message IdProduct {
  int64 id = 1;
}